docker start script updated for connecting to stardog on host